--- a/uknown_w6wlz1.backend_bsa.json
+++ b/uknown_w6wlz1.backend_bsa.json
@@ -1,28 +1,27 @@
 {
 	"_id": "uknown_w6wlz1.backend_bsa",
 	"type": "fragment",
-	"mode": "fresh",
+	"mode": "npc",
 	"script": "uknown_w6wlz1.backend_bsa",
 	"sector": "VNP_9399",
 	"sec_level": 4,
 	"date_added": 1569085645113,
-	"last_scraped": 1569141382088,
+	"last_scraped": 1569147990554,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1569085645113
 		}
 	],
-	"updt": 1569138876706,
-	"edit": 12,
-	"scrape_ct": 2,
-	"next_scrape": 1569141442088,
+	"updt": 1569141586347,
+	"edit": 13,
+	"next_scrape": 1569189640107,
 	"category": "dice_roller",
-	"last_update": 1569141382088,
+	"last_update": 1569147990554,
 	"output": [
 		{
 			"args": {},
-			"calls": 116078,
+			"calls": 127659,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"# Gos",
